--- a/01.ipynb
+++ b/01.ipynb
@@ -2944,14 +2944,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e388f40-91bc-42fc-bfc4-6cec387363a3",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://i.stack.imgur.com/YvuOa.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b454977d-c63f-4ad7-9892-b69274a46d2e",
+   "id": "e522db05-926d-4624-badf-433d4b3f4598",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "https://i.stack.imgur.com/YvuOa.png"
-   ]
+   "source": []
   }
  ],
  "metadata": {
